2010-09-17  Chris Kühl  <chrisk@openismus.com>

	Fixed typo in Script::get_object (constverrsion != constversion)

	* clutter/src/script.hg: Fixed typo in get_object.

2010-09-17  Chris Kühl  <chrisk@openismus.com>

	Fixed reference counting issue with Alpha::get_timeline

	* clutter/src/alpha.hg: Added refreturn to get_timeline.

2010-09-15  Chris Kühl  <chrisk@openismus.com>

	Removed use of NULL and changed use of uint to guint.

	* clutter/src/behaviour.ccg: Removed use of NULL and
	changed uint to guint.
	* clutter/src/container.ccg:
	* clutter/src/score.ccg:
	* clutter/src/script.ccg:

2010-09-15  Chris Kühl  <chrisk@openismus.com>

	Corrected SlotAlphaFunc documentation.

	* clutter/src/alpha.hg: Corrected SlotAlphaFunc documentation.

2010-09-13  Murray Cumming  <murrayc@murrayc.com>

	Remove extra ; to avoid compiler warnings.

	* clutter/src/clone.hg:
	* clutter/src/rectangle.hg: Remove extra ;s.

2010-09-13  Murray Cumming  <murrayc@murrayc.com>

	Timeline: Fix a compilation warning.

	* clutter/src/timeline.ccg: Use the correct type in the for() loop.

2010-09-07  Chris Kühl  <chrisk@openismus.com>

	Fix issue with last commit where returned vectors were 2x intended size.

	* clutter/src/behaviour.ccg: Fixed vector size issue.
	* clutter/src/container.ccg: Fixed vector size issue.
	* clutter/src/score.ccg: Fixed vector size issue.
	* clutter/src/script.ccg: Fixed vector size issue.
	* clutter/src/timeline.ccg: Fixed vector size issue.

2010-09-07  Chris Kühl  <chrisk@openismus.com>

	Replaced use of Glib::*Handle containers with std::vector.

	* clutter/src/behaviour-path.[hg|ccg]: create_with_knots takes
	std::vector instead of Glib::ArrayHandle.
	* clutter/src/behaviour.[hg|ccg]: get_actor returns std::vector instead
	of Glib::SListHandle.
	* clutter/src/container.[hg|ccg]: get_children returns std::vector
	instead of Glib::ListHandle.
	* clutter/src/score.[hg|ccg]: list_timelines returns std::vector instead
	of Glib::ListHandle.