@@ -1,46 +1,0 @@
-/* Copyright (C) 2010 The cluttermm Development Team
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free
- * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
- */
-
-#include <glibmm/object.h>
-#include <cluttermm/actor-meta.h>
- 
-_DEFS(cluttermm,clutter)
-_PINCLUDE(cluttermm/private/actor-meta_p.h)
-
-
-namespace Clutter
-{
-
-//TODO: Write a version of the large description from here: http://clutter-project.org/docs/clutter/stable/ClutterEffect.html#ClutterEffect.description
-class Effect : public ActorMeta
-{
-  _CLASS_GOBJECT(Effect, ClutterEffect, CLUTTER_EFFECT, ActorMeta, ClutterActorMeta)
-  _DERIVES_INITIALLY_UNOWNED()
-
-protected:
-  _CTOR_DEFAULT()
-
-public:
-  //There is no create() because this is an abstract base class.
-  //_WRAP_CREATE()
-
-  //There are no functions.
-
-  //TODO: Signals, properties, vfuncs
-};
-
-} // namespace Clutter
