@@ -26,8 +26,6 @@ int main(int argc, char** argv)
 
   std::cout
     << get_defs(CLUTTER_TYPE_ACTOR)
-    << get_defs(CLUTTER_TYPE_ACTOR_META)
-    << get_defs(CLUTTER_TYPE_ACTION)
     << get_defs(CLUTTER_TYPE_ALPHA)
     << get_defs(CLUTTER_TYPE_ANIMATION)
     << get_defs(CLUTTER_TYPE_BACKEND)
@@ -44,7 +42,6 @@ int main(int argc, char** argv)
     << get_defs(CLUTTER_TYPE_CLONE)
     << get_defs(CLUTTER_TYPE_COLOR)
     << get_defs(CLUTTER_TYPE_CONTAINER)
-    << get_defs(CLUTTER_TYPE_EFFECT)
     << get_defs(CLUTTER_TYPE_EVENT)
 //    << get_defs(CLUTTER_TYPE_FIXED)
     << get_defs(CLUTTER_TYPE_GROUP)
